Modernize FirstRunWizardActivity and add a confirmation diaglog before selecting backup file in AccountsActivity.
Also fix the newInstance warnings.